eval_outputs/diff_only/code_change/first/google/refined_instruction.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_instruction.spec.ts: Invalid left-hand side in prefix operation. (1:2)

> 1 | --- a/app/src/components/NoteList.tsx
    |   ^
  2 | +++ b/app/src/components/NoteList.tsx
  3 | +import { Note } from "@/types/Note";
  4 | +

   at refined_instruction.spec.ts:1

> 1 | --- a/app/src/components/NoteList.tsx
    |  ^
  2 | +++ b/app/src/components/NoteList.tsx
  3 | +import { Note } from "@/types/Note";
  4 | +

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

